--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h1>KingaMaria.com</h1>
 <p>Coming soon</p>
 
-  <img src="kingawizytowka.png"></img>
+  <img src="kingawizytowka.png" style="margin:auto"></img>
 
 </body>
 </html>
