--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <body>
 
-<h1>KingaMaria.com</h1>
+
 <p>Coming soon</p>
 
-  <img src="kingawizytowka.png" style="margin:auto"></img>
+  <img src="kingawizytowka.png" style="margin:auto; display:block;"></img>
 
 </body>
 </html>
