--- a/index.html
+++ b/index.html
@@ -2,13 +2,85 @@
 <html>
    <head>
         <title>Kinga Maria photography</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <style>
+html, body {
+  margin:0;
+  height:100%;
+  background-color: black;
+}
+.bg-container {
+  width:100%;
+  
+}
+.full-screen-width {
+    /*
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  max-width: 100vw;
+  width: 100vw;
+  */
+    width:100%;
+}
+
+.fixedov {
+    position:fixed;
+    top:10px;
+    left:auto;
+
+    align: center;
+    width:198px;
+    height:117px;
+}
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  height:70px;
+  width: 100%;
+  background: rgba(0,0,0,0.0);
+  color: white;
+  text-align: center;
+  padding:25px;
+}
+.fa {
+  padding: 15px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa {
+    color:white;
+    background: #e20686;
+}
+        </style>
     </head>
+
 <body>
+
+<img class="full-screen-width" src="kinga23.png"></img>
 
 
 <p>Coming soon</p>
 
-  <img src="kingawizytowka.png" style="margin:auto; display:block;"></img>
+aaaaa
+  <img class="fixedov" src="logo2.png"></img>
+
+<div class="footer"> 
+<a href="https://www.instagram.com/kingamariaphotography/" class="fa fa-instagram"></a> 
+
+<a href="https://wa.me/34617880839" class="fa fa-whatsapp"></a>
+<a href="mailto:kingamariaphotography@gmail.com" class="fa fa-envelope-o"></a></div>
 
 </body>
 </html>
