--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@ html, body {
   max-width: 100vw;
   width: 100vw;
   */
-    width:100%;
+  /*  width:100%;*/
+  height:100%;
+  
 }
 
 .fixedov {
